[gd_scene load_steps=6 format=3 uid="uid://detb787xddka8"]

[ext_resource type="Script" path="res://Scripts/SplitCamera.gd" id="1_eybq0"]
[ext_resource type="PackedScene" uid="uid://gklfpx5uo83n" path="res://Scenes/Nivel1.tscn" id="2_77yb7"]
[ext_resource type="PackedScene" uid="uid://c3skhvag2kqcc" path="res://Scenes/parallax_background.tscn" id="3_k3ogy"]
[ext_resource type="PackedScene" uid="uid://40kqhvq10ryq" path="res://Scenes/Pause_menu.tscn" id="4_tmdoi"]
[ext_resource type="PackedScene" uid="uid://c0jfmc4vjccqg" path="res://Scenes/hud.tscn" id="5_lm11c"]

[node name="Base" type="Node"]
script = ExtResource("1_eybq0")
NivelCargado = ExtResource("2_77yb7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 800.0
offset_right = 802.0
offset_bottom = 2000.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ContenedorA" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ViewportA" type="SubViewport" parent="HBoxContainer/ContenedorA"]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
msaa_2d = 1
canvas_item_default_texture_filter = 0
size = Vector2i(800, 900)
render_target_update_mode = 4

[node name="ParallaxBackground" parent="HBoxContainer/ContenedorA/ViewportA" instance=ExtResource("3_k3ogy")]

[node name="CamaraA" type="Camera2D" parent="HBoxContainer/ContenedorA/ViewportA"]
offset = Vector2(0, -200)

[node name="ContenedorB" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ViewportB" type="SubViewport" parent="HBoxContainer/ContenedorB"]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(800, 900)
render_target_update_mode = 4

[node name="ParallaxBackground" parent="HBoxContainer/ContenedorB/ViewportB" instance=ExtResource("3_k3ogy")]

[node name="CamaraB" type="Camera2D" parent="HBoxContainer/ContenedorB/ViewportB"]
offset = Vector2(0, -200)
limit_smoothed = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause_Menu" parent="CanvasLayer" instance=ExtResource("4_tmdoi")]

[node name="Modo" type="Label" parent="CanvasLayer"]
offset_left = 1370.0
offset_top = 8.0
offset_right = 1548.0
offset_bottom = 34.0
text = "Modo (Cambiar con Q):"

[node name="Personaje" type="Label" parent="CanvasLayer"]
offset_left = 1368.0
offset_top = 47.0
offset_right = 1450.0
offset_bottom = 73.0
text = "Personaje:"

[node name="HUD" parent="." instance=ExtResource("5_lm11c")]
metadata/_edit_group_ = true
